# batonguerre

./: .gitignore  .gitignore.swp  CMakeLists.txt  Makefile  Makefile.debug  Makefile.release  Makefile.run  README.md  ai.c  ai.h  animation.c  animation.h  animation_list.c  animation_list.h  anims  archer.c  archer.h  archer_critical_hit.json  archer_death.json  archer_hit.json  archer_short_hit.json  archer_walk.json  archercac.tps  archercrit.tps  archerdeath.tps  archerhit.tps  archerwalk.tps  array_list.c  array_list.h  arrow.c  arrow.h  arrow.json  attack_command.json  attackcommand.tps  base.c  base.h  battle  battle.c  battle.h  battle_interact.c  (+126 more)
confs/: global_conf.json
confs/base/: army.json  campaign.json
confs/levels/000/: configuration.json
confs/levels/1/: army.json  configuration.json
confs/levels/2/: army.json  configuration.json
confs/levels/3/: army.json  configuration.json
confs/levels/4/: army.json  configuration.json
confs/levels/5/: army.json  configuration.json
confs/levels/99/: configuration.json
confs/levels/mm0/: army.json  configuration.json
confs/saves/000/: army.json  campaign.json
confs/saves/001/: army.json  campaign.json
confs/saves/01/: army.json
